--- a/web/index.html
+++ b/web/index.html
@@ -9,6 +9,7 @@
 <header>Приложение вебинара <a href="http://javawebinar.ru/basejava/" target="_blank">Практика Java. Разработка Web
     приложения."</a></header>
 <h1>Курс BaseJava + Web</h1>
+<a href="./resume" >тест функционала</a>
 <footer>Приложение вебинара <a href="http://javawebinar.ru/basejava/" target="_blank">Практика Java. Разработка Web
     приложения."</a></footer>
 </body>
