--- a/web/index.html
+++ b/web/index.html
@@ -1,16 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/style.css">
-    <title>BaseJava.Web app</title>
+    <meta http-equiv="refresh" content="0; url=resume"/>
 </head>
 <body>
-<header>Приложение вебинара <a href="http://javawebinar.ru/basejava/" target="_blank">Практика Java. Разработка Web
-    приложения."</a></header>
-<h1>Курс BaseJava + Web</h1>
-<a href="./resume" >тест функционала</a>
-<footer>Приложение вебинара <a href="http://javawebinar.ru/basejava/" target="_blank">Практика Java. Разработка Web
-    приложения."</a></footer>
+<p><a href="resume">Resume List</a></p>
 </body>
 </html>
